--- a/src/Components/SecondPage/SecondPage.css
+++ b/src/Components/SecondPage/SecondPage.css
@@ -8,7 +8,7 @@
 }
 .box{
     width: 1226px;
-    height: 773px;
+    height: 743px;
     background-color: white;
     border-radius: 18px;
     margin-bottom: 15px;
@@ -19,6 +19,12 @@
     display: flex;
     margin-bottom: 20px;
     margin-top: 20px;
+    font-family: 'Helvetica Neue';
+    font-style: normal;
+    font-weight: 700;
+    font-size: 20px;
+    line-height: 24px;
+    color: #232323;
 
 }
 .main_box{
@@ -31,5 +37,17 @@
     z-index: 2;
     padding-top: 23px;
     padding-left: 73px;
+
+}
+.personal_info{
+    margin-right: 66px;
+}
+.black_line{
+    width: 185px;
+    height: 0px;
+    border: 1px solid #000000;
+    top:0;
+    margin-top: 10px;
+    margin-left:5px;
 
 }
