--- a/src/Components/SecondPage/SecondPage.css
+++ b/src/Components/SecondPage/SecondPage.css
@@ -1,3 +1,8 @@
+
+*{
+    box-sizing: border-box;
+    
+}
 .main_box{
     width: 1920px;
     height: 100vh;
@@ -12,6 +17,9 @@
     background-color: white;
     border-radius: 18px;
     margin-bottom: 15px;
+    display: flex;
+    justify-content: center;
+    padding-top: 60px;
 
 
 }
@@ -19,7 +27,6 @@
     display: flex;
     margin-bottom: 20px;
     margin-top: 20px;
-    font-family: 'Helvetica Neue';
     font-style: normal;
     font-weight: 700;
     font-size: 20px;
@@ -49,5 +56,79 @@
     top:0;
     margin-top: 10px;
     margin-left:5px;
-
+}
+.inputs{
+    margin-bottom:10px;
+    display:flex;
+    flex-direction: column;
+}
+.name{
+    height: 50px;
+    width:400px;
+    border-radius: 8px;
+    border: 2px solid #a7cfe9;
+}
+.first_part{
+    display: flex;
+    width: 878px;
+    justify-content: space-between;
+    margin-bottom: 32px;
+}
+.form{
+    display: flex;
+    flex-direction: column;
+    width: 878px;
+}
+.select1{
+    width: 878px;
+    height: 50px;
+    margin-bottom: 32px;
+    border: none;
+    background: #EBEBEB;
+    border-radius: 8px;
+    font-style: normal;
+    font-weight: 500;
+    font-size: 18px;
+    line-height: 21px;
+    letter-spacing: 0.04em;
+    color: #000000;
+}
+.inputs2{
+    
+    margin-bottom:10px;
+    width: 878px;
+    height: 50px;
+    border-radius: 8px;
+    border: 2px solid #a7cfe9;
+}
+.second_part{
+    margin-bottom: 30px;
+    display: flex;
+    flex-direction: column;
+}
+.button{
+    width: 176px;
+    height: 60px;
+    background: #62A1EB;
+    border-radius: 8px;
+    border: none;
+    font-weight: 500;
+    font-size: 20px;
+    line-height: 24px;
+    color: white;
+}
+.button_div{
+    display: flex;
+    justify-content: end;
+}
+label{
+    margin-bottom: 10px;
+    font-weight: 500;
+    font-size: 18px;
+    line-height: 21px;
+}
+.span{
+    font-weight: 300;
+    font-size: 14px;
+    line-height: 21px;
 }
