--- a/src/Components/SecondPage/SecondPage.css
+++ b/src/Components/SecondPage/SecondPage.css
@@ -4,8 +4,8 @@
     
 }
 .main_box{
-    width: 1920px;
-    height: 100vh;
+    width: 100%;
+    padding-top: 40px;
     background-color: #f6f6f6;
     position: absolute;
     top:0;
@@ -13,13 +13,13 @@
 }
 .box{
     width: 1226px;
-    height: 743px;
+    height: 973px;
     background-color: white;
     border-radius: 18px;
     margin-bottom: 15px;
     display: flex;
     justify-content: center;
-    padding-top: 60px;
+    padding-top: 80px;
 
 
 }
@@ -42,7 +42,7 @@
 .returnmark{
     position: relative;
     z-index: 2;
-    padding-top: 23px;
+    padding-top: 43px;
     padding-left: 73px;
 
 }
@@ -57,6 +57,10 @@
     margin-top: 10px;
     margin-left:5px;
 }
+.RedLogo{
+    margin-top: 20px;
+    margin-bottom: 25px;
+}
 .inputs{
     margin-bottom:10px;
     display:flex;
@@ -67,6 +71,7 @@
     width:400px;
     border-radius: 8px;
     border: 2px solid #a7cfe9;
+    margin-bottom: 10px;
 }
 .first_part{
     display: flex;
@@ -82,7 +87,7 @@
 .select1{
     width: 878px;
     height: 50px;
-    margin-bottom: 32px;
+    margin-bottom: 42px;
     border: none;
     background: #EBEBEB;
     border-radius: 8px;
@@ -102,11 +107,12 @@
     border: 2px solid #a7cfe9;
 }
 .second_part{
-    margin-bottom: 30px;
+    margin-bottom: 60px;
     display: flex;
     flex-direction: column;
 }
 .button{
+    margin-top: 60px;
     width: 176px;
     height: 60px;
     background: #62A1EB;
@@ -131,4 +137,7 @@ label{
     font-weight: 300;
     font-size: 14px;
     line-height: 21px;
+}
+input{
+    padding-left: 10px;
 }
