--- a/src/Components/SecondPage/SecondPage.css
+++ b/src/Components/SecondPage/SecondPage.css
@@ -85,6 +85,7 @@
     width: 878px;
 }
 .select1{
+    padding-left: 10px;
     width: 878px;
     height: 50px;
     margin-bottom: 52px;
@@ -140,4 +141,7 @@ label{
 }
 input{
     padding-left: 10px;
+}
+.select1.selectError{
+    border: solid red;
 }
