--- a/src/Components/ThirdPage/ThirdPage.css
+++ b/src/Components/ThirdPage/ThirdPage.css
@@ -1,5 +1,11 @@
 *{
     box-sizing: border-box;
+    font-family: HelveticaNeue;
+    
+}
+@font-face{
+    font-family: HelveticaNeue;
+    src:url(../../fonts/HelveticaNeue.ttc)
 }
 .parent{
     width: 100%;
@@ -42,7 +48,7 @@
 .personal_info{
     margin-right: 66px;
 }
-.black_line{
+.line2{
     width: 185px;
     height: 0px;
     border: 1px solid #000000;
@@ -64,6 +70,7 @@
     align-items: center;
     border:2px dashed #4386A9;
     padding-top: 110px;
+    /* cursor: pointer; */
 }
 .drop_zone_text{
     color: #4386A9;
@@ -90,6 +97,15 @@
     font-weight: 500;
     font-size: 20px;
     line-height: 24px;
+    position: relative;
     margin-top: 72px;
 
+}
+.inputFile{
+    width: 100%;
+    height: 100%;
+    top:0;
+    left: 0;
+    opacity: 0;
+    position: absolute;
 }
