--- a/src/Components/FourthPage.js/FourthPage.css
+++ b/src/Components/FourthPage.js/FourthPage.css
@@ -51,6 +51,7 @@
     font-family: HelveticaNeue;
     border: none;
     color: #FFFFFF;
+    cursor: pointer;
 }
 .welcomeButton{
     font-style: normal;
@@ -63,6 +64,7 @@
     background: white;
     border: none;
     margin-top: 25px;
+    cursor: pointer;
 }
 .FourthPageButtons{
     display: flex;
