--- a/src/Components/ThirdPage/ThirdPage.css
+++ b/src/Components/ThirdPage/ThirdPage.css
@@ -25,8 +25,6 @@
     display: flex;
     justify-content: center;
     padding-top: 80px;
-
-
 }
 .headers2{
     display: flex;
@@ -49,6 +47,7 @@
 }
 .personal_info{
     margin-right: 66px;
+    cursor: pointer;
 }
 .line2{
     margin-right: 5px;
@@ -89,10 +88,9 @@
 .add_button{
     display: flex;
     justify-content: space-between;
+    margin-bottom: 30px;
 }
- /* .accept_photo{
-    vertical-align: middle;
-} */
+
 .photo_text{   
     font-family: HelveticaNeue;
     font-style: normal;
@@ -155,6 +153,7 @@
     left: 0;
     opacity: 0;
     position: absolute;
+    cursor: pointer;
 }
 .inputFile{
     width: 100%;
@@ -163,6 +162,7 @@
     left: 0;
     opacity: 0;
     position: absolute;
+    cursor: pointer;
 }
 .leptop_name{
     display: flex;
@@ -329,6 +329,7 @@ color: #000000;
     font-family: HelveticaNeue;
     font-weight: 600;
     letter-spacing: 0.08em;
+    cursor: pointer;
 }
 .save{
     width: 219px;
@@ -342,6 +343,7 @@ color: #000000;
     border:none;
     border-radius: 8px;
     color: #FFFFFF;
+    cursor: pointer;
 }
 .SSD_label{
     font-family: HelveticaNeue;
@@ -445,4 +447,18 @@ color: #000000;
 }
 .last_inputs.laptopNameError img{
     display: inline;
+}
+.laptop_form.urlError .drop_zone{
+    background-color: #FFF1F1;
+}
+.laptop_form.urlError .drop_zone_text{
+    color: #E52F2F;
+    
+}
+.laptop_form.urlError .drop_zone_text2{
+    color: #E52F2F;
+    
+}
+.stop{
+    margin-bottom: 20px;
 }
