--- a/src/Components/WelcomePage/WelcomePage.css
+++ b/src/Components/WelcomePage/WelcomePage.css
@@ -11,7 +11,7 @@
     border:none;
     color:white;
     font-size: 20px;
-    
+    cursor: pointer;
 }
 .second_button{
     width: 387px;
@@ -20,6 +20,7 @@
     border-radius: 8px;
     border:none;
     color:white;
+    cursor: pointer;
     font-size: 20px;
 }
 .buttons{
