--- a/src/Components/SecondPage/SecondPage.css
+++ b/src/Components/SecondPage/SecondPage.css
@@ -206,3 +206,120 @@ h2{
 .h2{
     cursor: pointer;
 }
+.back{
+    display: none;
+}
+.responsive_phone{
+    display: none;
+}
+
+.one{
+    display: none;
+}
+@media (max-width:390px){
+    *{
+        box-sizing: border-box;
+        font-family: HelveticaNeue;
+        
+    } 
+    @font-face{
+        font-family: HelveticaNeue;
+        src:url(../../fonts/HelveticaNeue.ttc)
+    }
+    .parent{
+        width: 100%;
+        height: 100vh;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        position: relative;
+        
+    }
+    .returnmark{
+        display: none;
+    }
+    .back{
+        padding-top: 65px;
+        padding-left: 20px;
+        display: flex;
+        position: absolute;
+        top:0;
+        z-index: 2231;
+        
+    }
+    .name{
+        width: 356px;
+    }
+    .h2{
+        display: none;
+    }
+    .inputs2{
+        width: 356px;
+    }
+    .select1{
+        width: 356px;
+    }
+    .line{
+        display: none;
+    }
+    .employe{
+        display: flex;
+        justify-content: center;
+    }
+    .first_part{
+        width: 356px;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+    .box{
+        width: 100%;
+        display: flex;
+        justify-content: center;
+        /* padding-top: 40px; */
+    }
+    .headers{
+        width: 280px;
+    }
+    .form{
+        width: 356px;
+    }
+    .RedLogo{
+        display: none;
+    }
+    .main_box{
+        width: 100%;
+        
+    }
+    .responsive_computer{
+        display: none;
+    }
+    .responsive_phone{
+        display: inline-block;
+    }
+    .second_part{
+        margin-bottom: 0px;
+    }
+    .redb{
+        margin-bottom: 40px;
+    }
+    .one{
+        display: inline-block;
+        margin-top: 10px;
+        font-family: HelveticaNeue;
+        font-style: normal;
+        font-weight: 400;
+        font-size: 14px;
+        line-height: 17px;
+        
+
+text-align: center;
+
+color: #898989;
+    }
+    .employe{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+}
