--- a/src/Components/ThirdPage/ThirdPage.css
+++ b/src/Components/ThirdPage/ThirdPage.css
@@ -1,4 +1,4 @@
-*{
+/* *{
     box-sizing: border-box;
     font-family: HelveticaNeue;
     
@@ -73,9 +73,8 @@
     padding-top: 110px;
     margin-bottom: 40px;
     position: relative;
-    /* cursor: pointer; */
-}
-.main_image{
+} */
+/* .main_image{
     width: 878px;
     position: absolute;
     top:0;
@@ -461,4 +460,4 @@ color: #000000;
 }
 .stop{
     margin-bottom: 20px;
-}
+} */
