--- a/src/Components/ThirdPage/ThirdPage.css
+++ b/src/Components/ThirdPage/ThirdPage.css
@@ -1,4 +1,4 @@
-/* *{
+*{
     box-sizing: border-box;
     font-family: HelveticaNeue;
     
@@ -612,4 +612,4 @@ color: #000000;
         margin-bottom: 10px;
     }
     
-} */
+}
