--- a/src/Components/FourthPage.js/FourthPage.css
+++ b/src/Components/FourthPage.js/FourthPage.css
@@ -71,3 +71,11 @@
     flex-direction: column;
     align-items: center;
 }
+
+@media (max-width:390px){
+    .gray_box{
+        background-color: #ffffff;
+        width: 390px;
+        height: 100vh;
+    }
+}
