--- a/src/Components/ThirdPage/ThirdPage.css
+++ b/src/Components/ThirdPage/ThirdPage.css
@@ -21,10 +21,10 @@ input:focus{
     background: rgba(43, 75, 242, 0.06);
     border: 1.8px solid #6499FF;
 }
-.image_button:hover{
+button:hover{
     background: #317AD0;
 }
-.image_button:focus{
+button:focus{
     background: #1A5DAB;
 }
 .image_button2:hover{
